// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrgSearch Component renders search results after clicking 'Search' 1`] = `
<body>
  <div>
    <div
      class="OrgSearch"
    >
      <nav
        class="Nav"
      >
        <button
          class="Nav__expander"
          type="button"
        >
          Menu
        </button>
      </nav>
      <main>
        <header>
          <h1>
            Search for Organizations
          </h1>
        </header>
        <form>
          <div>
            <label
              for="search-term"
            >
              Search Term
            </label>
            <input
              id="search-term"
              type="text"
            />
          </div>
          <br />
          <button
            type="submit"
          >
            Search
          </button>
        </form>
        <section
          class="SearchResults"
        >
          <header>
            <h2>
              Results
            </h2>
          </header>
          <ul>
            <li>
              <a
                href="http://localhost/org/1"
                rel="noreferrer"
                target="_blank"
              >
                YMCA DC
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/2"
                rel="noreferrer"
                target="_blank"
              >
                Humane Society of Fairfax County, Inc
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/3"
                rel="noreferrer"
                target="_blank"
              >
                National VOAD
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/4"
                rel="noreferrer"
                target="_blank"
              >
                National Air and Space Museum
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/5"
                rel="noreferrer"
                target="_blank"
              >
                Fairfax County Health Department
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/6"
                rel="noreferrer"
                target="_blank"
              >
                Sully Historic Site
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/7"
                rel="noreferrer"
                target="_blank"
              >
                Vecinos Unidos
              </a>
            </li>
          </ul>
          <div
            class="SearchResults__page-buttons"
          >
            <button
              disabled=""
              type="button"
            >
              Previous
            </button>
            <button
              type="button"
            >
              Next
            </button>
          </div>
        </section>
      </main>
    </div>
  </div>
</body>
`;

exports[`OrgSearch Component renders search results that have the selected causes 1`] = `
<body>
  <div>
    <div
      class="OrgSearch"
    >
      <nav
        class="Nav"
      >
        <button
          class="Nav__expander"
          type="button"
        >
          Menu
        </button>
      </nav>
      <main>
        <header>
          <h1>
            Search for Organizations
          </h1>
        </header>
        <form>
          <div>
            <label
              for="search-term"
            >
              Search Term
            </label>
            <input
              id="search-term"
              type="text"
            />
          </div>
          <br />
          <fieldset
            class="EntityCheckboxes"
          >
            <legend>
              Causes (all are selected by default)
            </legend>
            <div>
              <label
                for="causes-1"
              >
                Youth
              </label>
              <input
                id="causes-1"
                name="causes"
                type="checkbox"
                value="Youth"
              />
            </div>
          </fieldset>
          <br />
          <button
            type="submit"
          >
            Search
          </button>
        </form>
        <section
          class="SearchResults"
        >
          <header>
            <h2>
              Results
            </h2>
          </header>
          <ul>
            <li>
              <a
                href="http://localhost/org/1"
                rel="noreferrer"
                target="_blank"
              >
                YMCA DC
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/5"
                rel="noreferrer"
                target="_blank"
              >
                Fairfax County Health Department
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/7"
                rel="noreferrer"
                target="_blank"
              >
                Vecinos Unidos
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/8"
                rel="noreferrer"
                target="_blank"
              >
                Girls on the Run of Northern Virginia
              </a>
            </li>
            <li>
              <a
                href="http://localhost/org/9"
                rel="noreferrer"
                target="_blank"
              >
                Optimist Club of Herndon, VA
              </a>
            </li>
          </ul>
        </section>
      </main>
    </div>
  </div>
</body>
`;

exports[`OrgSearch Component renders search results that match the search term 1`] = `
<body>
  <div>
    <div
      class="OrgSearch"
    >
      <nav
        class="Nav"
      >
        <button
          class="Nav__expander"
          type="button"
        >
          Menu
        </button>
      </nav>
      <main>
        <header>
          <h1>
            Search for Organizations
          </h1>
        </header>
        <form>
          <div>
            <label
              for="search-term"
            >
              Search Term
            </label>
            <input
              id="search-term"
              type="text"
            />
          </div>
          <br />
          <button
            type="submit"
          >
            Search
          </button>
        </form>
        <section
          class="SearchResults"
        >
          <header>
            <h2>
              Results
            </h2>
          </header>
          <ul>
            <li>
              <a
                href="http://localhost/org/1"
                rel="noreferrer"
                target="_blank"
              >
                YMCA DC
              </a>
            </li>
          </ul>
        </section>
      </main>
    </div>
  </div>
</body>
`;

exports[`OrgSearch Component renders the UI as expected 1`] = `
<body>
  <div>
    <div
      class="OrgSearch"
    >
      <nav
        class="Nav"
      >
        <button
          class="Nav__expander"
          type="button"
        >
          Menu
        </button>
      </nav>
      <main>
        <header>
          <h1>
            Search for Organizations
          </h1>
        </header>
        <form>
          <div>
            <label
              for="search-term"
            >
              Search Term
            </label>
            <input
              id="search-term"
              type="text"
            />
          </div>
          <br />
          <fieldset
            class="EntityCheckboxes"
          >
            <legend>
              Causes (all are selected by default)
            </legend>
            <div>
              <label
                for="causes-1"
              >
                Youth
              </label>
              <input
                id="causes-1"
                name="causes"
                type="checkbox"
                value="Youth"
              />
            </div>
            <div>
              <label
                for="causes-2"
              >
                Health
              </label>
              <input
                id="causes-2"
                name="causes"
                type="checkbox"
                value="Health"
              />
            </div>
            <div>
              <label
                for="causes-3"
              >
                Disaster Response
              </label>
              <input
                id="causes-3"
                name="causes"
                type="checkbox"
                value="Disaster Response"
              />
            </div>
            <div>
              <label
                for="causes-4"
              >
                Animals
              </label>
              <input
                id="causes-4"
                name="causes"
                type="checkbox"
                value="Animals"
              />
            </div>
            <div>
              <label
                for="causes-5"
              >
                History
              </label>
              <input
                id="causes-5"
                name="causes"
                type="checkbox"
                value="History"
              />
            </div>
            <div>
              <label
                for="causes-6"
              >
                Education
              </label>
              <input
                id="causes-6"
                name="causes"
                type="checkbox"
                value="Education"
              />
            </div>
            <div>
              <label
                for="causes-7"
              >
                Human Rights
              </label>
              <input
                id="causes-7"
                name="causes"
                type="checkbox"
                value="Human Rights"
              />
            </div>
            <div>
              <label
                for="causes-8"
              >
                Arts
              </label>
              <input
                id="causes-8"
                name="causes"
                type="checkbox"
                value="Arts"
              />
            </div>
            <div>
              <label
                for="causes-9"
              >
                Wildlife and Environment
              </label>
              <input
                id="causes-9"
                name="causes"
                type="checkbox"
                value="Wildlife and Environment"
              />
            </div>
            <div>
              <label
                for="causes-10"
              >
                Elderly
              </label>
              <input
                id="causes-10"
                name="causes"
                type="checkbox"
                value="Elderly"
              />
            </div>
            <div>
              <label
                for="causes-11"
              >
                Poverty
              </label>
              <input
                id="causes-11"
                name="causes"
                type="checkbox"
                value="Poverty"
              />
            </div>
          </fieldset>
          <br />
          <button
            type="submit"
          >
            Search
          </button>
        </form>
      </main>
    </div>
  </div>
</body>
`;
